# INSPT-3-641_Electronica-2025

./: README.md
00_template/: CMakeLists.txt  main.c
01_parpadeo/: CMakeLists.txt  main.c
02_puls_led_1/: CMakeLists.txt  hardware.h  main.c
03_puls_led_2/: CMakeLists.txt  hardware.h  main.c
04_puls_led_3/: CMakeLists.txt  CMakeLists.txt.bak  main.c
05_puls_led_int_1/: CMakeLists.txt  hardware.h  main.c
06_puls_led_int_2/: CMakeLists.txt  main.c
07_adc/: CMakeLists.txt  main.c
08_adc_filtros/: CMakeLists.txt  hardware.h  main.c
08b_adc_oversampling/: CMakeLists.txt  main.c
09_pwm_dimmer_led/: CMakeLists.txt  hardware.h  main.c
10_pwm_servo_puls/: CMakeLists.txt  hardware.h  main.c
11_pwm_servo_adc/: CMakeLists.txt  hardware.h  main.c
60_LCD1602_I2C/: CMakeLists.txt  hardware.h  main.c
61_OLED_I2C/: CMakeLists.txt  hardware.h  main.c
61_SSD1306_I2C/: CMakeLists.txt  main.c
62_DS3231_24C32_I2C/: CMakeLists.txt  hardware.h  main.c
70_simple_web_server/: CMakeLists.txt  CMakeLists.txt.bak  hardware.h  html.c  html.h  main.c
70_simple_web_server/simple_web_server/: CMakeLists.txt  debug_sws_config.h  errores_sws.h  http.c  http.h  simple_ws.h  web_server.c  web_server.h  wifi.c  wifi.h
70_wifi_sta/: CMakeLists.txt  main.c
71_wifi_sta_ntp/: CMakeLists.txt  main.c
72_web_server/: CMakeLists.txt  main.c
72_web_server/web_server/: CMakeLists.txt  http.c  web_server_err.h
73_web_server_ntp/: CMakeLists.txt  hardware.h  html.c  main.c
ADC_test_DNL_INL/: .gitignore  CMakeLists.txt  SETUP.md  analyze_dnl_inl.py  capture_uart_samples.py  (+2 more)
(+56 files in other folders)
